@@ -1,1 +1,2 @@
   * QML corrections
+  * VMail now plays using QtMobility QML element
